Added Experiences Page

--- a/pages/experiences/experience.html
+++ b/pages/experiences/experience.html
@@ -1,12 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <title>soodi592 Experiences</title>
+    <style>
+        /* Animation to change the text color */
+        @keyframes rgbTextAnimation {
+            0% {
+                color: rgb(255, 0, 0); /* Red */
+            }
+            25% {
+                color: rgb(0, 255, 0); /* Green */
+            }
+            50% {
+                color: rgb(0, 0, 255); /* Blue */
+            }
+            75% {
+                color: rgb(255, 255, 0); /* Yellow */
+            }
+            100% {
+                color: rgb(255, 0, 255); /* Magenta */
+            }
+        }
+
+        /* Apply the scrollbar style */
+        ::-webkit-scrollbar {
+            width: 16px;  /* Width of the scrollbar */
+        }
+
+        ::-webkit-scrollbar-track {
+            background-color: #101820;  /* Background of the track */
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #09243f;  /* Initial color of the thumb */
+            border-radius: 8px;
+            animation: rgbScrollbarAnimation 10s infinite; /* Apply RGB animation */
+        }
+
+        /* Styling for the container div */
+        .container {
+            background-color: #09243f;  /* Milky background */
+            display: block;           /* Make div block level so it can be centered */
+            border-radius: 15px;      /* Rounded corners */
+            padding: 10px 20px;       /* Padding around the text */
+            margin: 20px auto;        /* Center the div horizontally */
+            width: fit-content;       /* Make the div only as wide as the text */
+        }
+
+        /* Exp Divs */
+        .Exp {
+          background-color: #09243f;
+          background-color: #09243f;  /* Milky background */
+            display: block;           /* Make div block level so it can be centered */
+            border-radius: 15px;      /* Rounded corners */
+            padding: 10px 20px;       /* Padding around the text */
+            margin: 20px auto;        /* Center the div horizontally */
+            width: 800px;
+            text-align: center;
+        }
+
+        /* Exp Headings (Titles) */
+        .Title {
+          color: #F9F6EE;
+        }
+
+        /* Styling for the h1 text */
+        h1 {
+            font-size: 3em;
+            font-family: sans-serif;
+            animation: rgbTextAnimation 5s infinite; /* Change text color every 5 seconds infinitely */
+            color: rgb(255, 0, 0); /* Initial text color */
+            margin: 0;  /* Remove default margin */
+        }
+
+        /* Styling for the body */
+        body {
+          background-color: #101820;
+        }
+    </style>
+</head>
 <body>
-  <h1>COMING SOON</h1>
+    <div class="container">
+        <h1>soodi592 Experiences</h1>
+    </div>
+    <!--Exps Go Here-->
+  <div class="Exp">
+      <h2 class="Title">Success is not the key to happiness. Happiness is the key to success.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Believe you can, and you're halfway there.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Dream big, work hard, stay focused, and surround yourself with good people.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Do what you can with all you have, wherever you are.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Success usually comes to those who are too busy to be looking for it.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Don’t be afraid to give up the good to go for the great.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Opportunities don't happen. You create them.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">The harder you work for something, the greater you'll feel when you achieve it.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Don’t watch the clock; do what it does. Keep going.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Great things never come from comfort zones.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">You don’t have to be great to start, but you have to start to be great.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">The future belongs to those who believe in the beauty of their dreams.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Success is not in what you have, but who you are.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Your limitation—it’s only your imagination.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Don’t stop when you’re tired. Stop when you’re done.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">If you believe it will work out, you’ll see opportunities. If you don’t, you’ll see obstacles.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Success is walking from failure to failure with no loss of enthusiasm.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Work hard in silence, let your success be your noise.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">You are never too old to set another goal or to dream a new dream.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">The way to get started is to quit talking and begin doing.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Don’t limit your challenges. Challenge your limits.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Don’t wait for opportunity. Create it.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Sometimes later becomes never. Do it now.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Little things make big days.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">It’s going to be hard, but hard does not mean impossible.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Push yourself, because no one else is going to do it for you.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Keep your face always toward the sunshine—and shadows will fall behind you.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">What lies behind us and what lies before us are tiny matters compared to what lies within us.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Happiness is not something ready made. It comes from your own actions.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Act as if what you do makes a difference. It does.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Motivation is what gets you started. Habit is what keeps you going.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">You don’t have to see the whole staircase, just take the first step.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Only I can change my life. No one can do it for me.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">The best time to plant a tree was 20 years ago. The second-best time is now.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Everything you can imagine is real.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Do what you feel in your heart to be right—for you’ll be criticized anyway.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Turn your wounds into wisdom.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">The secret of getting ahead is getting started.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">It does not matter how slowly you go as long as you do not stop.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Everything you’ve ever wanted is on the other side of fear.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Whatever you are, be a good one.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Be yourself; everyone else is already taken.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Do not wait to strike till the iron is hot, but make it hot by striking.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">What we achieve inwardly will change outer reality.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Try not to become a man of success but rather try to become a man of value.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">To improve is to change; to be perfect is to change often.</h2>
+  </div>
+  <div class="Exp">
+      <h2 class="Title">Keep your eyes on the stars and your feet on the ground.</h2>
+  </div>
 </body>
 </html>
-
-<style>
-  h1 {
-    text-align: center;
-  }
-</style>
