--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header-div" style="background-color: #F9F6EE; width: 100%; position: fixed; top: 0; left: 0; z-index: -1;">
             <div id="header-tools-container">
                 <h1 id="header-name">soodi592</h1>
-                <h2 id="header-tools"><a href="pages/tools/tools.html" style="color:#101820;">Repositories</a></h2>
+                <h2 id="header-tools"><a href="pages/repositories/repositories.html" style="color:#101820;">Repositories</a></h2>
                 <h2 id="header-tools"><a href="pages/experiences/experience.html" style="color:#101820;">Experiences</a></h2>
                 <h2 id="header-tools"><a href="pages/blog.html" style="color:#101820;">Blog</a></h2>
             </div>
