--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header id="header-div" style="background-color: #F9F6EE; width: 100%; position: fixed; top: 0; left: 0; z-index: -1;">
+    <header id="header-div" style="background-color: #F9F6EE; width: 100%; position: fixed; top: 0; left: 0; z-index: 1;">
             <div id="header-tools-container">
                 <h1 id="header-name">soodi592</h1>
                 <h2 id="header-tools"><a class="no-underlined" href="pages/repositories/repositories.html">Repositories</a></h2><h2>     |     </h2>
@@ -31,7 +31,8 @@
 
     <div class="neon-border" style="text-align: center;">
         <h2>My Slogan</h2>
-        <p id="slogan">Anar Moz Teryak</p>
+        <!--<p>کدنویسی یعنی راهیابی به دنیای بی‌پایان احتمالات</p>-->
+        <p>Coding is a gateway to an endless world of possibilities.</p>
     </div>
 
     <div class="neon-border">
@@ -45,6 +46,7 @@
     body {
         background-color: #101820;
         font-family: 'Vazirmatn', sans-serif;
+        height: 5000px;
     }
 
     .no-underlined {
@@ -58,11 +60,9 @@
     }
 
     .no-underlined:hover {
-        color: #F9F6EE;
-        background-color: #101820;
         color: #F9F6EE; /* تغییر رنگ متن */
         background-color: #101820; /* تغییر رنگ پس‌زمینه */
-        transform: scale(1.1); /* کمی بزرگ‌تر شدن لینک در حالت هاور */
+        transform: scale(1.02); /* کمی بزرگ‌تر شدن لینک در حالت هاور */
     }
 
     #name {
@@ -78,6 +78,7 @@
         align-items: center;
         display: flex;
         align-items: center;
+        z-index: 1;
     }
 
     #header-name {
@@ -126,32 +127,50 @@
     }
 
     .neon-border {
-      padding: 15px 15px;
+      padding: 15px;
       line-height: normal;
       color: #fff;
-      border: 4px solid #FFF8DC;
+      background-color: black;
+      border: 0px solid #FFF8DC;
       border-radius: 8px;
       animation: neon-pulse 1.5s infinite alternate;
       transition: transform 0.3s ease;
       max-width: 900px;
       margin-inline: auto;
-      margin-top: 20px;
+      margin-top: 40px;
     }
 
     .neon-border:hover {
-      transform: scale(1.1);
+      transform: scale(1.02);
     }
 
     @keyframes neon-pulse {
       0% {
-        box-shadow: 0 0 5px #FFF8DC, 0 0 10px #FFF8DC, 0 0 20px #FFF8DC;
+        box-shadow: 0 0 2px #FFF8DC, 0 0 5px #FFF8DC, 0 0 12.5px #FFF8DC;
       }
       100% {
-        box-shadow: 0 0 10px #FFF8DC, 0 0 20px #FFF8DC, 0 0 40px #FFF8DC;
+        box-shadow: 0 0 2px #FFF8DC, 0 0 10px #FFF8DC, 0 0 25px #FFF8DC;
       }
     }
 
     .blue-bold {
         color: #1d7ad6;
+    }
+
+    /* Apply the scrollbar style */
+    ::-webkit-scrollbar {
+        width: 8px;  /* Width of the scrollbar */
+    }
+
+    /*
+    ::-webkit-scrollbar-track {
+        width: 2px;
+    } 
+    */
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #FFF8DC;  /* Initial color of the thumb */
+        border-radius: 8px;
+        animation: rgbScrollbarAnimation 10s infinite; /* Apply RGB animation */
     }
 </style>
