--- a/pages/experiences/experience.html
+++ b/pages/experiences/experience.html
@@ -52,13 +52,23 @@
 
         /* Exp Divs */
         .Exp {
-          background-color: #09243f;
           background-color: #09243f;  /* Milky background */
             display: block;           /* Make div block level so it can be centered */
             border-radius: 15px;      /* Rounded corners */
             padding: 10px 20px;       /* Padding around the text */
             margin: 20px auto;        /* Center the div horizontally */
             width: 800px;
+            text-align: center;
+        }
+
+        /* Last Exp Div */
+        .Last-Exp {
+          background-color: #09243f;  /* Milky background */
+            display: block;           /* Make div block level so it can be centered */
+            border-radius: 15px;      /* Rounded corners */
+            padding: 10px 20px;       /* Padding around the text */
+            margin: 20px auto;        /* Center the div horizontally */
+            width: 500px;
             text-align: center;
         }
 
@@ -234,5 +244,8 @@
   <div class="Exp">
       <h2 class="Title">Keep your eyes on the stars and your feet on the ground.</h2>
   </div>
+  <div class="Last-Exp">
+    <h2 class="Title">Thanks For Reading The All sentences ❤️<br>Click <a href="https://soodi592.github.io">Here</a> To Get Back To The Main Page.</h2>
+</div>
 </body>
 </html>
