--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         background-color: #101820;
         font-family: 'Vazirmatn', sans-serif;
         height: 5000px;
+        align-items: center;
     }
 
     .no-underlined {
