--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>soodi592 Website</title>
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400&display=swap" rel="stylesheet">
+    <meta name="description" content="soodi592 personal website">
+    <meta name="keywords" content="soodi592, code, freelance, سودی, soodi">
 </head>
 
 <body>
