--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
 <head>
-    <title>soodi592 Website</title>
+    <title>soodi592 Website | Freelance Coder</title>
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400&display=swap" rel="stylesheet">
-    <meta name="description" content="soodi592 personal website">
+    <meta name="description" content="soodi592 - Freelance coder specializing in web development and programming projects.">
     <meta name="keywords" content="soodi592, code, freelance, سودی, soodi">
 </head>
 
