--- a/index.html
+++ b/index.html
@@ -41,6 +41,45 @@
         <p>Hi Dear!👋 <br> I'm soodi592 & I'm really excited because you came to my website😊<br>I love both back-end & front-end.<br>I make bots in <strong class="blue-bold">Telegram</strong>, <strong class="blue-bold">Bale</strong>
         , <strong class="blue-bold">Discord</strong>.<br>I started computer when i was 13 years old!</p>
     </div>
+
+    <h2 style="text-align: center; color: #F9F6EE; margin-top: 30px;margin-bottom: 0;">
+        My Skills:
+    </h2>
+
+    <!--First Line-->
+    <div id="first_line" style="display: flex; gap: 0;height: fit-content;">
+        <div class="neon-border" style="margin-right: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Python</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: blue; border-radius: 5px; margin-top: 0;margin-bottom: 0px;"></div>
+        </div>
+        <div class="neon-border" style="margin-left: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Html</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: #00FF00; border-radius: 5px; margin-top: 0;margin-bottom: 0px;"></div>
+        </div>
+    </div>
+    <!--Second Line-->
+    <div id="first_line" style="display: flex; gap: 0;height: fit-content;">
+        <div class="neon-border" style="margin-top: 20px;margin-right: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Css</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 85%; background-color: #d8b207; border-radius: 5px;"></div>
+            </div>
+        </div>
+        <div class="neon-border" style="margin-top: 20px;margin-left: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>JavaScript</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 75%; background-color: #eb0800; border-radius: 5px;"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
