--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
     <div id="first_line" style="display: flex; gap: 0;height: fit-content;">
         <div class="neon-border" style="margin-top: 20px;margin-right: 10px; width: 425px;">
             <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Microsoft PowerPoint</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 95%; background-color: #00fff2; border-radius: 5px;"></div>
+            </div>
+        </div>
+        <div class="neon-border" style="margin-top: 20px;margin-left: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Microsoft Word</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 90%; background-color: #ff00aa; border-radius: 5px;"></div>
+            </div>
+        </div>
+    </div>
+    <!--Third Line-->
+    <div id="first_line" style="display: flex; gap: 0;height: fit-content;">
+        <div class="neon-border" style="margin-top: 20px;margin-right: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
                 <b>Css</b>
             </p>
             <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
@@ -76,7 +95,26 @@
                 <b>JavaScript</b>
             </p>
             <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
-                <div style="height: 100%; width: 75%; background-color: #eb0800; border-radius: 5px;"></div>
+                <div style="height: 100%; width: 80%; background-color: #eb0800; border-radius: 5px;"></div>
+            </div>
+        </div>
+    </div>
+    <!--Fourth Line-->
+    <div id="first_line" style="display: flex; gap: 0;height: fit-content;">
+        <div class="neon-border" style="margin-top: 20px;margin-right: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>Batch</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 75%; background-color: #8c00ff; border-radius: 5px;"></div>
+            </div>
+        </div>
+        <div class="neon-border" style="margin-top: 20px;margin-left: 10px; width: 425px;">
+            <p style="font-size: 20px;margin-bottom: 5px;margin-top: 0;">
+                <b>PHP</b>
+            </p>
+            <div style="height: 10px; width: 100%; background-color: gray; border-radius: 5px; margin-top: 0;margin-bottom: 0px;">
+                <div style="height: 100%; width: 70%; background-color: #00ff9d; border-radius: 5px;"></div>
             </div>
         </div>
     </div>
